--- a/todo.html
+++ b/todo.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Title</title> 
-  <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
+  <title>ToDo</title> 
+  <meta name="viewport" content="user-scalable=0, initial-scale=1.0, maximum-scale=1.0;">
   <meta name="apple-mobile-web-app-capable" content="yes" /> 
   <link rel="stylesheet" href="css/jquery.mobile.theme.css" />
   <link rel="stylesheet" href="css/jquery.mobile.css" />
@@ -18,33 +18,35 @@
   <script src="lib/add2home.js"></script>
 </head> 
 <body> 
-<div id="main" data-role="page">
 <div data-role="content">
   <div data-role="header" data-position="fixed" data-theme="b">
     <h1>{{-title}}</h1>
-    <a id="add" data-icon="plus" class="ui-btn-right" data-inline="true">Add</a>
-    <!--a id="delete" data-icon="grid" class="ui-btn-left" data-inline="true">Search</a-->
+    	<a id="add" data-icon="plus" class="ui-btn-right" data-inline="true">Add</a>
+		<div data-role="popup" id="popupMap">
+		<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+		<iframe src="map.html" width="290" height="390" seamless></iframe>
+		</div>
+		<a id="geomap" data-icon="grid" class="ui-btn-left" data-inline="true">Map</a>
+		</div>
   </div>
-
-  <!--div data-role="content"-->	
-  <div id="newitem">
+</div>	
+<div id="newitem">
       <input type="text" id="textbox" placeholder="Enter To Do item"/>
       <a id="save" data-role="button" data-inline="true" data-icon='check'  data-theme="b">Save</a>
-	  <a id="cancel" data-role="button" data-inline="true" data-icon='delete'  data-theme="b">Cancel</a>
-	
+	  <a id="cancel" data-role="button" data-inline="true" data-icon='delete'  data-theme="b">Cancel</a>	
 </div>
+
 <div data-role="list">		
     <ul id="list" data-role="listview">
-      <li>
-		<div id='tickbox' class='tickbox'>&nbsp</div>
-        <span class="text">{{-text}}</span>
+      		<li>
+				<span class='tickbox' class='tickbox'>&nbsp</span>
+        		<span class="text">{{-text}}</span>
 		<div id='deleteButton' class='deleteButton'>Delete</span>
-      </li>
+      		</li>
     </ul>
+		</div>
 </div>
-  		</div>
-	</div>
-	<!--div id='notext' data-role="popup" data-rel="dialog">You have not entered any text, Please enter a todo item !</div-->
+
 </body>
 </html>
 
