--- a/todo.html
+++ b/todo.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html> 
-<html> 
+<html manifest="todo.appcache"> 
 <head> 
   <title>ToDo</title> 
   <meta name="viewport" content="user-scalable=0, initial-scale=1.0, maximum-scale=1.0;">
-  <meta name="apple-mobile-web-app-capable" content="yes" /> 
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png"> 
   <link rel="stylesheet" href="css/jquery.mobile.theme.css" />
   <link rel="stylesheet" href="css/jquery.mobile.css" />
   <link rel="stylesheet" href="css/todo.css" />
-  <link rel="stylesheet" href="css/add2home.css">
   <script src="lib/jquery.js"></script>
   <script src="lib/jquery.mobile.js"></script>
   <script src="lib/underscore.js"></script>
@@ -15,7 +15,6 @@
   <script src="lib/backbone.localStorage.js"></script>
   <script src="lib/iscroll.js"></script>
   <script src="lib/app.js"></script>
-  <script src="lib/add2home.js"></script>
 </head> 
 <body> 
 <div data-role="content">
